# ray-tracing-in-one-weekend

./: ATTRIBUTION  Cargo.toml  fullrender1.ppm  image.ppm  materials1.ppm  materials2.ppm  materials3.ppm  sphere1.ppm  sphere2.ppm  sphere3.ppm
geometry3d/: Cargo.toml
geometry3d/src/: lib.rs
geometry3d/tests/: tests.rs
n_tuple/: Cargo.toml
n_tuple/src/: lib.rs  vec3.rs
ntuple/: Cargo.toml
ntuple/src/: derive.rs  lib.rs
ntuple/tests/: tests.rs
ntuple_derive/: Cargo.toml
ntuple_derive/src/: lib.rs
ntuple_derive/tests/: tests.rs
profiling/: cachegrind.out.first  cachegrind.out.initial  cachegrind.out.vec3_before  cachegrind.out.vec3_overhaul  callgrind.out.first  callgrind.out.initial  hyperfine.first.json  hyperfine.initial.json  hyperfine.nine.json  hyperfine.square.json  perf.data.vec3_before  perf.data.vec3_overhaul
rtow/: Cargo.toml
rtow/src/: camera.rs  color.rs  config.rs  hit_record.rs  image.rs  lib.rs  main.rs  material.rs  object.rs  perlin.rs  random.rs  ray.rs  sampler.rs  texture.rs
scenes/: cornell_box.json  earth.json  fullrender.json  perlin_light.json  perlin_spheres.json  random_scene.json  two_spheres.json
src/: camera.rs  color.rs  hit_record.rs  image.rs  lib.rs  main.rs  material.rs  object.rs  ray.rs  sampler.rs  vec3.rs
vec3/: Cargo.toml
vec3/src/: lib.rs
